make calls to requests.get() more obvious

--- a/demo_client.ipynb
+++ b/demo_client.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,11 +103,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "server = \"localhost\"\n",
+    "port = 8000\n",
     "catalog = \"bdp2022\""
    ]
   },
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,19 +144,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = requests_tiled(\n",
-    "    server, catalog, suffix=(\n",
-    "        \"?page[limit]=0\"  # 0: find all matching runs\n",
+    "r = requests.get(\n",
+    "    (\n",
+    "        f\"http://{server}:{port}\"\n",
+    "        \"/api/v1/node/search\"\n",
+    "        f\"/{catalog}\"\n",
+    "        \"?page[limit]=0\"  # 0: all matching\n",
     "        f\"&filter[time_range][condition][since]={iso_to_ts(start_time)}\"\n",
     "        f\"&filter[time_range][condition][until]={iso_to_ts(end_time)}\"\n",
     "        f\"&filter[time_range][condition][timezone]={tz}\"\n",
     "        \"&sort=time\"\n",
     "    )\n",
-    ")"
+    ").json()"
    ]
   },
   {
@@ -167,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -217,19 +221,22 @@
     "plan_name = \"take_image\"\n",
     "print(f\"Search for {plan_name=}\")\n",
     "\n",
-    "r = requests_tiled(\n",
-    "    server, catalog, suffix=(\n",
+    "r = requests.get(\n",
+    "    (\n",
+    "        f\"http://{server}:{port}\"\n",
+    "        \"/api/v1/node/search\"\n",
+    "        f\"/{catalog}\"\n",
     "        \"?page[limit]=0\"  # 0: all matching\n",
     "        \"&filter[eq][condition][key]=plan_name\"\n",
     "        f'&filter[eq][condition][value]=\"{plan_name}\"'\n",
     "        \"&sort=time\"\n",
     "    )\n",
-    ")"
+    ").json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +378,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 123
+     "execution_count": 10
     }
    ],
    "source": [
@@ -389,32 +396,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "search_text = \"M9\"\n",
     "case_sensitive = True\n",
-    "r = requests_tiled(\n",
-    "    server, catalog, suffix=(\n",
+    "r = requests.get(\n",
+    "    (\n",
+    "        f\"http://{server}:{port}\"\n",
+    "        \"/api/v1/node/search\"\n",
+    "        f\"/{catalog}\"\n",
     "        \"?page[limit]=0\"  # 0: all matching\n",
     "        f\"&filter[fulltext][condition][text]={search_text}\"\n",
     "        f\"&filter[fulltext][condition][case_sensitive]={str(case_sensitive).lower()}\"\n",
     "        \"&sort=time\"\n",
     "    )\n",
-    ")"
+    ").json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Search of catalog='bdp2022' has 127 runs which contain \"M6-gallery\".\nFirst run: started='2022-07-15T23:14:54.974411' scan_id=1 plan_name='push_images'\nLast  run: started='2022-09-08T13:54:25.178280' scan_id=1960 plan_name='push_images'\n"
+      "Search of catalog='bdp2022' has 75 runs which contain \"M9\".\nFirst run: started='2022-11-11T01:34:27.938719' scan_id=1961 plan_name='m9_push_images'\nLast  run: started='2022-11-23T11:17:32.495794' scan_id=2035 plan_name='m9_push_images'\n"
      ]
     }
    ],
@@ -442,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -454,14 +464,17 @@
     }
    ],
    "source": [
-    "r = requests_tiled(\n",
-    "    server, catalog, suffix=(\n",
+    "r = requests.get(\n",
+    "    (\n",
+    "        f\"http://{server}:{port}\"\n",
+    "        \"/api/v1/node/search\"\n",
+    "        f\"/{catalog}\"\n",
     "        \"?page[limit]=0\"  # 0: all matching\n",
     "        \"&filter[eq][condition][key]=plan_name\"\n",
     "        '&filter[eq][condition][value]=\"take_image\"'\n",
     "        \"&sort=time\"\n",
     "    )\n",
-    ")\n",
+    ").json()\n",
     "stop_md = r[\"data\"][-1][\"attributes\"][\"metadata\"][\"stop\"]\n",
     "streams = list(stop_md[\"num_events\"].keys())\n",
     "uid = stop_md[\"run_start\"]\n",
@@ -477,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +587,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 131
+     "execution_count": 14
     }
    ],
    "source": [
@@ -602,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
