--- a/demo_client.ipynb
+++ b/demo_client.ipynb
@@ -33,12 +33,13 @@
     "- The Python [`requests`](https://requests.readthedocs.io/) package\n",
     "  (instead of [`urllib.request`](https://docs.python.org/3.11/library/urllib.request.html)\n",
     "  from the Python Standard Library).\n",
-    "  Python programmers with at least intermediate experience may have already used `requests` (for reasons\n",
+    "  Python programmers with at least intermediate experience may have already\n",
+    "  used `requests` (for reasons\n",
     "  best [summarized](https://stackoverflow.com/questions/2018026) by others.)\n",
     "  to *scrape* information from a web page.\n",
-    "- The [`tiled.client`](https://blueskyproject.io/tiled/reference/python-client.html) Python\n",
-    "  library from the Bluesky Framework.  The `tiled.client` makes it easier to work directly\n",
-    "  with data structures such as numpy arrays, pandas DataFrames, and xarray tables.\n",
+    "- TODO: The [`tiled.client`](https://blueskyproject.io/tiled/reference/python-client.html)\n",
+    "  Python library from the Bluesky Framework.  The `tiled.client` makes it easier to work\n",
+    "  directly with data structures such as numpy arrays, pandas DataFrames, and xarray tables.\n",
     "\n",
     "For each type of client, show some specific queries and responses.\n",
     "\n",
