--- a/demo_client.ipynb
+++ b/demo_client.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "### databroker *catalog*\n",
     "\n",
-    "The Bluesky `databroker` stores data from a Bluesky instrument in a [MongoDB *collection*](https://www.mongodb.com/docs/manual/core/databases-and-collections/) which is called a *catalog*.  A single MongoDB server may host several databroker catalogs.  The catalog defined in this tiled configuration template is called `45id_instrument`:\n",
+    "The Bluesky `databroker` stores data from a Bluesky instrument in a [MongoDB *collection*](https://www.mongodb.com/docs/manual/core/databases-and-collections/) which is called a *catalog*.  A single MongoDB server may host several databroker catalogs.  Tiled will access a catalog with a configuration such as this template called `45id_instrument`:\n",
     "\n",
     "```\n",
     "  - path: 45id_instrument\n",
@@ -103,7 +103,7 @@
   },
   {
    "source": [
-    "# Client using `requests` package\n",
+    "# `requests` Client\n",
     "\n",
     "We'll use the `requests` package, to search the tiled server's API using tiled's `http://` interface by assembling a URI string.  Since the URI is a string consisting of several parts, we'll build that string up from its parts in each example below.\n",
     "\n",
@@ -791,7 +791,7 @@
   },
   {
    "source": [
-    "## Client using `tiled` package"
+    "## `tiled.client` Client"
    ],
    "cell_type": "markdown",
    "metadata": {}
