--- a/demo_client.ipynb
+++ b/demo_client.ipynb
@@ -329,13 +329,9 @@
   },
   {
    "source": [
-    "### Show a run's metadata\n",
+    "## Find runs with given text\n",
     "\n",
-    "Let's show the various metadata available from a Bluesky *run*.  We'll use the last run from the previous search.\n",
-    "\n",
-    "```\n",
-    "http://localhost:8000/api/v1/node/metadata/bdp2022/a4edf4b3-8a12-4724-b817-fd45958488da\n",
-    "```"
+    "Find run(s) that include some text in the metadata.  Here, let's find all the runs that have the text `M9 demo`."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -343,6 +339,55 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "uri='http://localhost:8000/api/v1/node/search/bdp2022?page[limit]=0&filter[fulltext][condition][text]=M9 demo&filter[fulltext][condition][case_sensitive]=true&sort=time'\n",
+      "Search of catalog='bdp2022' has 375 runs.\n",
+      "First run: started='2022-07-15T23:14:54.974411' scan_id=1 plan_name='push_images'\n",
+      "Last  run: started='2022-11-23T11:17:32.495794' scan_id=2035 plan_name='m9_push_images'\n"
+     ]
+    }
+   ],
+   "source": [
+    "search_text = \"M9 demo\"\n",
+    "case_sensitive = True\n",
+    "uri = (\n",
+    "    f\"http://{server}:{port}\"\n",
+    "    \"/api/v1/node/search\"\n",
+    "    f\"/{catalog}\"\n",
+    "    \"?page[limit]=0\"  # 0: all matching\n",
+    "    f\"&filter[fulltext][condition][text]={search_text}\"\n",
+    "    f\"&filter[fulltext][condition][case_sensitive]={str(case_sensitive).lower()}\"\n",
+    "    \"&sort=time\"\n",
+    ")\n",
+    "\n",
+    "print(f\"{uri=}\")\n",
+    "r = requests.get(uri).json()\n",
+    "\n",
+    "print(f'Search of {catalog=} has {len(r[\"data\"])} runs.')\n",
+    "print_results_summary(r)"
+   ]
+  },
+  {
+   "source": [
+    "### Show a run's metadata\n",
+    "\n",
+    "Let's show the various metadata available from a Bluesky *run*.  We'll use the last run from the previous search.\n",
+    "\n",
+    "```\n",
+    "http://localhost:8000/api/v1/node/metadata/bdp2022/a1233634-1259-438f-b9f0-f77c26f48f54\n",
+    "```"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,136 +426,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'start': {'uid': 'a4edf4b3-8a12-4724-b817-fd45958488da',\n",
-       "  'time': 1661889997.662096,\n",
-       "  'versions': {'apstools': '1.6.2',\n",
-       "   'bluesky': '1.8.3',\n",
-       "   'bluesky_queueserver': '0.0.15',\n",
+       "{'start': {'uid': 'a1233634-1259-438f-b9f0-f77c26f48f54',\n",
+       "  'time': 1669223852.495794,\n",
+       "  'versions': {'apstools': '1.6.9.dev89+gbf712d9',\n",
+       "   'bluesky': '1.10.0',\n",
+       "   'bluesky_queueserver': '0.0.18',\n",
        "   'databroker': '1.2.5',\n",
        "   'epics': '3.5.0',\n",
        "   'h5py': '3.7.0',\n",
-       "   'matplotlib': '3.5.2',\n",
-       "   'numpy': '1.20.3',\n",
-       "   'ophyd': '1.6.4',\n",
-       "   'pyRestTable': '2020.0.3',\n",
-       "   'spec2nexus': '2021.2.1'},\n",
+       "   'matplotlib': '3.6.2',\n",
+       "   'numpy': '1.23.4',\n",
+       "   'ophyd': '1.7.0',\n",
+       "   'pyRestTable': '2020.0.6',\n",
+       "   'spec2nexus': '2021.2.4'},\n",
        "  'databroker_catalog': 'bdp2022',\n",
-       "  'login_id': 'bdp@terrier.xray.aps.anl.gov',\n",
+       "  'login_id': 'bdp@mona3.xray.aps.anl.gov',\n",
        "  'beamline_id': 'BDP',\n",
        "  'instrument_name': 'APS-U Beamline Data Pipelines project in 2022',\n",
        "  'proposal_id': 'bdp2022',\n",
-       "  'milestone': 'BDP M4 demo',\n",
-       "  'pid': 22441,\n",
-       "  'scan_id': 1959,\n",
-       "  'sample': 'simulated_sample_102_66',\n",
-       "  'game_key': 'fine image',\n",
+       "  'milestone': 'BDP M9 demo',\n",
+       "  'pid': 61262,\n",
+       "  'scan_id': 2035,\n",
        "  'plan_type': 'generator',\n",
-       "  'plan_name': 'take_image',\n",
-       "  'detectors': ['adsimdet'],\n",
-       "  'num_points': 1,\n",
-       "  'num_intervals': 0,\n",
-       "  'plan_args': {'detectors': [\"MySimDetector(prefix='bdpSimExample:', name='adsimdet', read_attrs=['hdf1', 'pva'], configuration_attrs=['cam', 'cam.acquire_period', 'cam.acquire_time', 'cam.image_mode', 'cam.manufacturer', 'cam.model', 'cam.num_exposures', 'cam.num_images', 'cam.trigger_mode', 'hdf1', 'pva'])\"],\n",
-       "   'num': 1},\n",
-       "  'hints': {'dimensions': [[['time'], 'primary']]},\n",
-       "  'incident_beam': 195.3764808605135,\n",
-       "  'incident_beam_units': 'simulation',\n",
-       "  'coarse_x': 0.0,\n",
-       "  'coarse_y': 0.0,\n",
-       "  'coarse_x_units': 'degrees',\n",
-       "  'coarse_y_units': 'degrees',\n",
-       "  'fine_x': -171.24069174885585,\n",
-       "  'fine_y': 248.7569795618142,\n",
-       "  'acquire_time': 0.25,\n",
-       "  'acquire_period': 0.251,\n",
-       "  'frames_per_image': 1,\n",
-       "  'HDF5_compression': 'zlib',\n",
-       "  'shutter': 'open',\n",
-       "  'bdp_demo': 'M4'},\n",
-       " 'stop': {'run_start': 'a4edf4b3-8a12-4724-b817-fd45958488da',\n",
-       "  'time': 1661889999.67191,\n",
-       "  'uid': '0cb0e643-877f-41b3-96b2-7adf75bef657',\n",
+       "  'plan_name': 'm9_push_images',\n",
+       "  'purpose': 'publish image frames via PVaccess',\n",
+       "  'num_images': 12000,\n",
+       "  'frame_rate': 1000.0,\n",
+       "  'datetime': '2022-11-23 11:17:32.480612',\n",
+       "  'client': '/clhome/BDP/DM/workflows/example-06/qserver_client.py',\n",
+       "  'session': 'M9 demo'},\n",
+       " 'stop': {'run_start': 'a1233634-1259-438f-b9f0-f77c26f48f54',\n",
+       "  'time': 1669223872.8862715,\n",
+       "  'uid': 'b7b51924-624f-405f-be3a-557f7fa56432',\n",
        "  'exit_status': 'success',\n",
        "  'reason': '',\n",
        "  'num_events': {'primary': 1}},\n",
-       " 'summary': {'uid': 'a4edf4b3-8a12-4724-b817-fd45958488da',\n",
-       "  'scan_id': 1959,\n",
-       "  'timestamp': 1661889997.662096,\n",
-       "  'datetime': '2022-08-30T15:06:37.662096',\n",
-       "  'plan_name': 'take_image',\n",
+       " 'summary': {'uid': 'a1233634-1259-438f-b9f0-f77c26f48f54',\n",
+       "  'scan_id': 2035,\n",
+       "  'timestamp': 1669223852.495794,\n",
+       "  'datetime': '2022-11-23T11:17:32.495794',\n",
+       "  'plan_name': 'm9_push_images',\n",
        "  'stream_names': ['primary'],\n",
-       "  'duration': 2.0098140239715576}}"
+       "  'duration': 20.390477418899536}}"
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 12
     }
    ],
    "source": [
     "run[\"attributes\"][\"metadata\"]"
-   ]
-  },
-  {
-   "source": [
-    "### Search for runs containing given text.\n",
-    "\n",
-    "It is possible to search a catalog for runs containing given text.  Here is one example searching for `M9` (upper case only)."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "uri='http://localhost:8000/api/v1/node/search/bdp2022?page[limit]=0&filter[fulltext][condition][text]=M9&filter[fulltext][condition][case_sensitive]=true&sort=time'\n"
-     ]
-    }
-   ],
-   "source": [
-    "search_text = \"M9\"\n",
-    "case_sensitive = True\n",
-    "\n",
-    "uri =(\n",
-    "    f\"http://{server}:{port}\"\n",
-    "    \"/api/v1/node/search\"\n",
-    "    f\"/{catalog}\"\n",
-    "    \"?page[limit]=0\"  # 0: all matching\n",
-    "    f\"&filter[fulltext][condition][text]={search_text}\"\n",
-    "    f\"&filter[fulltext][condition][case_sensitive]={str(case_sensitive).lower()}\"\n",
-    "    \"&sort=time\"\n",
-    ")\n",
-    "print(f\"{uri=}\")\n",
-    "r = requests.get(uri).json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Search of catalog='bdp2022' has 75 runs which contain \"M9\".\nFirst run: started='2022-11-11T01:34:27.938719' scan_id=1961 plan_name='m9_push_images'\nLast  run: started='2022-11-23T11:17:32.495794' scan_id=2035 plan_name='m9_push_images'\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f'Search of {catalog=} has {len(r[\"data\"])} runs which contain \"{search_text}\".')\n",
-    "print_results_summary(r)"
    ]
   },
   {
@@ -537,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +648,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 14
     }
    ],
    "source": [
@@ -705,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
