--- a/demo_client.ipynb
+++ b/demo_client.ipynb
@@ -763,7 +763,11 @@
   },
   {
    "source": [
-    "## `tiled.client` Client"
+    "### Get data from a file served by *tiled*.\n",
+    "\n",
+    "This file is in the catalog named (in our tiled server) as `directory`.  It happens to be a NeXus (HDF5) data file from the [NeXus documentation](https://manual.nexusformat.org/examples/python/index.html#simple-example-plot).\n",
+    "\n",
+    "First find the signal names.  Since this is not a `BlueskyRun`, the results dictionary is a bit different.  Instead of a `data` key (as above), the information we seek is in the `contents` key."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -771,6 +775,123 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "uri='http://localhost:8000/api/v1/node/full/directory/hdf5/writer_1_3.h5/Scan/data?format=json'\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'counts': {'contents': {},\n",
+       "  'metadata': {'axes': 'two_theta', 'signal': '1', 'units': 'counts'}},\n",
+       " 'two_theta': {'contents': {}, 'metadata': {'units': 'degrees'}}}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "uri = \"http://localhost:8000/api/v1/node/full/directory/hdf5/writer_1_3.h5/Scan/data?format=json\"\n",
+    "print(f\"{uri=}\")\n",
+    "r = requests.get(uri).json()\n",
+    "r[\"contents\"]"
+   ]
+  },
+  {
+   "source": [
+    "Get the `counts` array."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "uri='http://localhost:8000/api/v1/array/full/directory/hdf5/writer_1_3.h5/Scan/data/counts?format=application/json&slice=0:31'\n"
+     ]
+    }
+   ],
+   "source": [
+    "uri = \"http://localhost:8000/api/v1/array/full/directory/hdf5/writer_1_3.h5/Scan/data/counts?format=application/json&slice=0:31\"\n",
+    "print(f\"{uri=}\")\n",
+    "counts = requests.get(uri).json()"
+   ]
+  },
+  {
+   "source": [
+    "Get the `two_theta` array."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "uri='http://localhost:8000/api/v1/array/full/directory/hdf5/writer_1_3.h5/Scan/data/two_theta?format=application/json&slice=0:31'\n"
+     ]
+    }
+   ],
+   "source": [
+    "uri = \"http://localhost:8000/api/v1/array/full/directory/hdf5/writer_1_3.h5/Scan/data/two_theta?format=application/json&slice=0:31\"\n",
+    "print(f\"{uri=}\")\n",
+    "tth = requests.get(uri).json()"
+   ]
+  },
+  {
+   "source": [
+    "Print the data in two columns."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "print(\"two_theta  counts\")\n",
+    "for x, y in zip(tth, counts):\n",
+    "    print(f\"{x}  {y}\")"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 21,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "two_theta  counts\n17.92608  1037\n17.92591  1318\n17.92575  1704\n17.92558  2857\n17.92541  4516\n17.92525  9998\n17.92508  23819\n17.92491  31662\n17.92475  40458\n17.92458  49087\n17.92441  56514\n17.92425  63499\n17.92408  66802\n17.92391  66863\n17.92375  66599\n17.92358  66206\n17.92341  65747\n17.92325  65250\n17.92308  64129\n17.92291  63044\n17.92275  60796\n17.92258  56795\n17.92241  51550\n17.92225  43710\n17.92208  29315\n17.92191  19782\n17.92175  12992\n17.92158  6622\n17.92141  4198\n17.92125  2248\n17.92108  1321\n"
+     ]
+    }
+   ]
+  },
+  {
+   "source": [
+    "## `tiled.client` Client"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
