--- a/demo_client.ipynb
+++ b/demo_client.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "# Tiled Python Client Demonstration\n",
     "\n",
-    "Demonstrate examples of a Python client accessing a tiled data server (running on `localhost`).  The server provides two databroker catalogs (`bdp2022` and `20idb_usaxs`).\n",
+    "Demonstrate examples of a Python client accessing a tiled data server (running on `localhost`).  The server provides two databroker catalogs (`bdp2022` and `20idb_usaxs`) and some selected data files from APS beam lines in a nested directory known to the tiled data server as `directory`.\n",
     "\n",
     "Show two types of Python client:\n",
     "\n",
