--- a/demo_client.ipynb
+++ b/demo_client.ipynb
@@ -57,6 +57,17 @@
    "source": [
     "## Structure of Bluesky's databroker data\n",
     "\n",
+    "Bluesky data is structured in databroker into three distinct levels which will be described below.\n",
+    "\n",
+    "- databroker *catalog* : a set of bluesky *runs*\n",
+    "- bluesky *run* : data (& metadata) for a single run, including zero or more *streams*\n",
+    "- run *stream* : a set of related data acquisition events (including metadata)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "### databroker *catalog*\n",
     "\n",
     "The Bluesky `databroker` stores data from a Bluesky instrument in a [MongoDB *collection*](https://www.mongodb.com/docs/manual/core/databases-and-collections/) which is called a *catalog*.  A single MongoDB server may host several databroker catalogs.  Tiled will access a catalog with a configuration such as this template called `45id_instrument`:\n",
@@ -74,8 +85,13 @@
     "\n",
     "> In MongoDB, *databases* hold one or more collections of documents.\n",
     "\n",
-    "To avoid further name confusion, this will be the only time we speak of a MongoDB *database*.\n",
-    "\n",
+    "To avoid further name confusion, this will be the only time we speak of a MongoDB *database*."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "### bluesky *run*\n",
     "\n",
     "A bluesky [*run*](https://blueskyproject.io/bluesky/documents.html#overview-of-a-run) contains all the data acquired for a single measurement sequence (such as a step scan).  It is stored by databroker as a set of JSON documents.\n",
@@ -86,14 +102,24 @@
     "\n",
     "The `stop` document contains metadata keys describing how the run ended, including any data streams that were recorded.\n",
     "\n",
-    "The tiled server adds an additional `summary` metadata key to the run that includes content from both `start` and `end`, including a `datatime` key that is a text version of the date & time when the run started.\n",
+    "The tiled server adds an additional `summary` metadata key to the run that includes content from both `start` and `end`, including a `datetime` key that is a text version of the date & time when the run started.\n",
     "\n",
-    "There are a couple other document types, used for [external file resources](https://blueskyproject.io/bluesky/hardware.html#external-asset-writing-interface) such as area detector images.\n",
-    "\n",
+    "There are a couple other document types, used for [external file resources](https://blueskyproject.io/bluesky/hardware.html#external-asset-writing-interface) such as area detector images."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "### bluesky data *stream*\n",
     "\n",
-    "During a bluesky run, data is acquired into streams, each with its own name.  It is common for the main data to be acquired.  A stream will have one or more descriptor documents and zero or more `event` documents.  The `descriptor` documents, combined by the tiled server into the stream's metadata, describe the signals measured in the stream.  The `event` documents contain each of the time-stamped data acquisition events in the stream.  The tiled server gathers these events together and provides data arrays organized by the signal name.\n",
-    "\n",
+    "During a bluesky run, data is acquired into streams, each with its own name.  It is common for the main data to be acquired.  A stream will have one or more descriptor documents and zero or more `event` documents.  The `descriptor` documents, combined by the tiled server into the stream's metadata, describe the signals measured in the stream.  The `event` documents contain each of the time-stamped data acquisition events in the stream.  The tiled server gathers these events together and provides data arrays organized by the signal name."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "### metadata\n",
     "\n",
     "As described above, there are two types of metadata for each run, the *run* metadata and the *stream* metadata.  See the two sections immediately preceding for details."
