DOC refs to large files

--- a/demo_client.ipynb
+++ b/demo_client.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 13
     }
    ],
    "source": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 15
     }
    ],
    "source": [
@@ -694,6 +694,40 @@
   },
   {
    "source": [
+    "### Is there any information about external files?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "uri='http://localhost:8000/api/v1/documents/bdp2022/43044b6e-f6ba-48cb-a975-90d236dcbaaa'\nr.text='[\"start\", {\"uid\": \"43044b6e-f6ba-48cb-a975-90d236dcbaaa\", \"time\": 1661877393.776133, \"versions\": {\"apstools\": \"1.6.2\", \"bluesky\": \"1.8.3\", \"bluesky_queueserver\": \"0.0.15\", \"databroker\": \"1.2.5\", \"epics\": \"3.5.0\", \"h5py\": \"3.7.0\", \"matplotlib\": \"3.5.2\", \"numpy\": \"1.20.3\", \"ophyd\": \"1.6.4\", \"pyRestTable\": \"2020.0.3\", \"spec2nexus\": \"2021.2.1\"}, \"databroker_catalog\": \"bdp2022\", \"login_id\": \"bdp@terrier.xray.aps.anl.gov\", \"beamline_id\": \"BDP\", \"instrument_name\": \"APS-U Beamline Data Pipelines project in 2022\", \"proposal_id\": \"bdp2022\", \"milestone\": \"BDP M4 demo\", \"pid\": 27615, \"scan_id\": 1829, \"sample\": \"simulated_sample_83_68\", \"game_key\": \"fine image\", \"plan_type\": \"generator\", \"plan_name\": \"take_image\", \"detectors\": [\"adsimdet\"], \"num_points\": 1, \"num_intervals\": 0, \"plan_args\": {\"detectors\": [\"MySimDetector(prefix=\\'bdpSimExample:\\', name=\\'adsimdet\\', read_attrs=[\\'hdf1\\', \\'pva\\'], configuration_attrs=[\\'cam\\', \\'cam.acquire_period\\', \\'cam.acquire_time\\', \\'cam.image_mode\\', \\'cam.manufacturer\\', \\'cam.model\\', \\'cam.num_exposures\\', \\'cam.num_images\\', \\'cam.trigger_mode\\', \\'hdf1\\', \\'pva\\'])\"], \"num\": 1}, \"hints\": {\"dimensions\": [[[\"time\"], \"primary\"]]}, \"incident_beam\": 195.89805775534157, \"incident_beam_units\": \"simulation\", \"coarse_x\": 0.0, \"coarse_y\": 0.0, \"coarse_x_units\": \"degrees\", \"coarse_y_units\": \"degrees\", \"fine_x\": -223.081675898186, \"fine_y\": -331.5786710024647, \"acquire_time\": 0.25, \"acquire_period\": 0.251, \"frames_per_image\": 1, \"HDF5_compression\": \"zlib\", \"shutter\": \"open\", \"bdp_demo\": \"M4\"}]\\n[\"descriptor\", {\"run_start\": \"43044b6e-f6ba-48cb-a975-90d236dcbaaa\", \"time\": 1661877395.75955, \"data_keys\": {\"adsimdet_image\": {\"shape\": [1, 1024, 1024], \"source\": \"PV:bdpSimExample:\", \"dtype\": \"array\", \"external\": \"FILESTORE:\", \"object_name\": \"adsimdet\"}}, \"uid\": \"f8a3d064-8c2e-44de-acbd-f2612dba8ed9\", \"configuration\": {\"adsimdet\": {\"data\": {\"adsimdet_cam_acquire_period\": 0.251, \"adsimdet_cam_acquire_time\": 0.25, \"adsimdet_cam_image_mode\": 0, \"adsimdet_cam_manufacturer\": \"Simulated detector\", \"adsimdet_cam_model\": \"Basic simulator\", \"adsimdet_cam_num_exposures\": 1, \"adsimdet_cam_num_images\": 1, \"adsimdet_cam_trigger_mode\": 0}, \"timestamps\": {\"adsimdet_cam_acquire_period\": 1661877393.644936, \"adsimdet_cam_acquire_time\": 1661877393.633899, \"adsimdet_cam_image_mode\": 1661877393.613209, \"adsimdet_cam_manufacturer\": 1661876690.558074, \"adsimdet_cam_model\": 1661876690.558081, \"adsimdet_cam_num_exposures\": 1661876791.7751992, \"adsimdet_cam_num_images\": 1661877393.623536, \"adsimdet_cam_trigger_mode\": 1661876714.6509168}, \"data_keys\": {\"adsimdet_cam_acquire_period\": {\"source\": \"PV:bdpSimExample:cam1:AcquirePeriod_RBV\", \"dtype\": \"number\", \"shape\": [], \"units\": \"\", \"lower_ctrl_limit\": 0.0, \"upper_ctrl_limit\": 0.0, \"precision\": 3}, \"adsimdet_cam_acquire_time\": {\"source\": \"PV:bdpSimExample:cam1:AcquireTime_RBV\", \"dtype\": \"number\", \"shape\": [], \"units\": \"\", \"lower_ctrl_limit\": 0.0, \"upper_ctrl_limit\": 0.0, \"precision\": 3}, \"adsimdet_cam_image_mode\": {\"source\": \"PV:bdpSimExample:cam1:ImageMode_RBV\", \"dtype\": \"integer\", \"shape\": [], \"units\": null, \"lower_ctrl_limit\": null, \"upper_ctrl_limit\": null, \"enum_strs\": [\"Single\", \"Multiple\", \"Continuous\"]}, \"adsimdet_cam_manufacturer\": {\"source\": \"PV:bdpSimExample:cam1:Manufacturer_RBV\", \"dtype\": \"string\", \"shape\": [], \"units\": null, \"lower_ctrl_limit\": null, \"upper_ctrl_limit\": null}, \"adsimdet_cam_model\": {\"source\": \"PV:bdpSimExample:cam1:Model_RBV\", \"dtype\": \"string\", \"shape\": [], \"units\": null, \"lower_ctrl_limit\": null, \"upper_ctrl_limit\": null}, \"adsimdet_cam_num_exposures\": {\"source\": \"PV:bdpSimExample:cam1:NumExposures_RBV\", \"dtype\": \"integer\", \"shape\": [], \"units\": \"\", \"lower_ctrl_limit\": 0, \"upper_ctrl_limit\": 0}, \"adsimdet_cam_num_images\": {\"source\": \"PV:bdpSimExample:cam1:NumImages_RBV\", \"dtype\": \"integer\", \"shape\": [], \"units\": \"\", \"lower_ctrl_limit\": 0, \"upper_ctrl_limit\": 0}, \"adsimdet_cam_trigger_mode\": {\"source\": \"PV:bdpSimExample:cam1:TriggerMode_RBV\", \"dtype\": \"integer\", \"shape\": [], \"units\": null, \"lower_ctrl_limit\": null, \"upper_ctrl_limit\": null, \"enum_strs\": [\"Internal\", \"External\"]}}}}, \"name\": \"primary\", \"hints\": {\"adsimdet\": {\"fields\": []}}, \"object_keys\": {\"adsimdet\": [\"adsimdet_image\"]}}]\\n[\"resource\", {\"spec\": \"AD_HDF5\", \"root\": \"/\", \"resource_path\": \"clhome/BDP/voyager/adsimdet/2022/08/30/d585f272-dd9b-4ac0-b521_000.h5\", \"resource_kwargs\": {\"frame_per_point\": 1}, \"path_semantics\": \"posix\", \"uid\": \"506944a6-7632-4db8-9448-82b258211ed4\", \"run_start\": \"43044b6e-f6ba-48cb-a975-90d236dcbaaa\"}]\\n[\"datum_page\", {\"resource\": \"506944a6-7632-4db8-9448-82b258211ed4\", \"datum_id\": [\"506944a6-7632-4db8-9448-82b258211ed4/0\"], \"datum_kwargs\": {\"point_number\": [0]}}]\\n[\"event_page\", {\"time\": [1661877395.766505], \"uid\": [\"b1e6e4be-0f75-4eab-97af-e8a35da7d109\"], \"seq_num\": [1], \"descriptor\": \"f8a3d064-8c2e-44de-acbd-f2612dba8ed9\", \"filled\": {\"adsimdet_image\": [false]}, \"data\": {\"adsimdet_image\": [\"506944a6-7632-4db8-9448-82b258211ed4/0\"]}, \"timestamps\": {\"adsimdet_image\": [1661877393.7810526]}}]\\n[\"stop\", {\"run_start\": \"43044b6e-f6ba-48cb-a975-90d236dcbaaa\", \"time\": 1661877395.7828147, \"uid\": \"3d074ebc-208c-4e4d-98fc-926fca752f51\", \"exit_status\": \"success\", \"reason\": \"\", \"num_events\": {\"primary\": 1}}]\\n'\n"
+     ]
+    }
+   ],
+   "source": [
+    "uid = \"43044b6e-f6ba-48cb-a975-90d236dcbaaa\"\n",
+    "uri = (\n",
+    "    f\"http://{server}:{port}\"\n",
+    "    \"/api/v1/documents\"\n",
+    "    f\"/{catalog}\"\n",
+    "    f\"/{uid}\"\n",
+    "    \"?fill=false\"\n",
+    ")\n",
+    "print(f\"{uri=}\")\n",
+    "r = requests.get(uri)\n",
+    "print(f\"{r.text=}\")"
+   ]
+  },
+  {
+   "source": [
     "### Get the data from the data stream named primary (the canonical main data).\n",
     "\n",
     "To get the data, we need to change the type of search using `/api/v1/node/full` (so far, we have been using the default search for metadata: `/api/v1/node/search`) and specify the format of the result.  One format is `json`.  Let's pick some data from the M6 demo (with `M6-gallery` matching text) that has a very long list (1-D) of floating point numbers."
@@ -703,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +854,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 20
     }
    ],
    "source": [
@@ -839,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +931,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 21,
+   "execution_count": 23,
    "outputs": [
     {
      "output_type": "stream",
@@ -917,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
